Added custom component with ControlValueAccessor to show some ngModel action

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,8 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
 
+    <base href="/">
+
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
@@ -91,7 +93,6 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/systemjs.config.js"></script>
     <!--SCRIPTS END-->
 
